--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
 	font-family: sans-serif;
 	font-size: 15px;
 	color: #555;
+	overflow: hidden;
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -150,4 +151,53 @@ ul, li {
 	font-size: 13px;
 	color: #666;
 	margin-top: 5px;
+}
+
+/*Screen chat */
+.screen-chat {
+	width: 100%;
+	height: 100%;
+	cursor: default;
+/*	position: relative;
+	display: flex;
+	flex-direction: column;
+	flex-grow: 1;
+	flex-shrink: 1;*/
+	overflow: hidden;
+}
+
+/*Navbar chat*/
+.navbar-chat {
+/*	position: relative;
+	display: flex;
+	flex-direction: column;
+	flex-grow: 0;
+	flex-shrink: 0;
+	overflow: hidden;
+	padding-right: 1px;
+	background-color: rgb(255, 255, 255);
+	border-color: rgb(213, 217, 222);
+	width: 332px;*/
+	float: left;
+	width: 20%;
+	/*height: 100%;*/
+	padding: 10px;
+	border: 1px solid grey;
+	overflow: hidden;
+}
+/*Contain chat*/
+.contain-chat {
+/*	position: relative;
+	display: flex;
+	flex-direction: column;
+	flex-grow: 1;
+	flex-shrink: 1;*/
+	overflow: hidden scroll;
+	float: left;
+	width: 80%;
+	overflow-y: auto;
+}
+
+* {
+	box-sizing: border-box;
 }
