--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,16 @@
 	margin: 0;
 }
 
+html  {
+	height: 100%;
+}
+
 body {
 	font-family: sans-serif;
 	font-size: 15px;
 	color: #555;
 	overflow: hidden;
+	height: 100%;
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -115,8 +120,10 @@ ul, li {
 
 /*Main show messages*/
 .main-chat {
-	height:  auto;
+	height:  95%;
 	padding:  10px 68px 60px 69px;
+	/*margin-top: 50px;*/
+	overflow: hidden scroll;
 }
 .main-chat .msg-user {
 	width: 100%;
@@ -158,44 +165,177 @@ ul, li {
 	width: 100%;
 	height: 100%;
 	cursor: default;
-/*	position: relative;
-	display: flex;
-	flex-direction: column;
-	flex-grow: 1;
-	flex-shrink: 1;*/
 	overflow: hidden;
 }
 
 /*Navbar chat*/
 .navbar-chat {
-/*	position: relative;
-	display: flex;
-	flex-direction: column;
-	flex-grow: 0;
-	flex-shrink: 0;
-	overflow: hidden;
-	padding-right: 1px;
-	background-color: rgb(255, 255, 255);
-	border-color: rgb(213, 217, 222);
-	width: 332px;*/
 	float: left;
 	width: 20%;
-	/*height: 100%;*/
+	height: 100%;
 	padding: 10px;
 	border: 1px solid grey;
 	overflow: hidden;
 }
+
+.navbar-profile {
+	height: 50px;
+	margin: 10px 10px 10px 10px;
+}
+
+.navbar-profile img {
+	float: left;
+	width: 40px;
+	height: 40px;
+	border: 1px solid;
+	border-radius: 20px;
+	cursor: pointer;
+}
+
+.navbar-profile h2{
+	display: inline-block;
+	margin-top: 10px;
+	margin-left: 2px;
+}
+
+.search-outchat {
+	width: 70%;
+	float: left;
+	margin-top: 5px;
+	margin-left: 10px;
+}
+
+.search-keyboard {
+	display: inline-block;
+	width: 20%;
+	height: 40px;
+	background-color: rgb(241, 241, 244);
+	margin-top: 5px;
+	margin-left: 20px;
+	padding: 10px 25px;
+	border: 1px solid grey;
+	border-radius: 5px;
+}
+
+.navbar-search {
+	height: 50px;
+	margin: 10px 10px 10px 10px;
+}
+
+.navbar-search input {
+	width: 250px;
+	height: 40px;
+	border: 1px solid grey;
+	border-radius: 5px;
+}
+
+.navbar-action {
+	margin: 10px 10px 10px 10px;
+	height: 80%;
+	overflow: hidden scroll;
+}
+
+
+.navbar-row {
+	height: 60px;
+	padding: 2px 2px;
+	margin: 2px 2px;
+}
+
+.navbar-row:hover {
+	background-color: rgb(207, 232, 252);
+	border: 0px solid;
+	border-radius: 5px;
+}
+
+.navbar-row img {
+	float: left;
+	width: 40px;
+	height: 40px;
+	border: 1px solid;
+	border-radius: 20px;
+	cursor: pointer;
+}
+
+.navbar-row h2 {
+	display: inline-block;
+	margin: 10px;
+}
+
+.navbar-end {
+	height: 40px;
+	margin: 10px;
+}
+
+.sign-out {
+	width: 60px;
+	height: 30px;
+	float: right;
+	border:  1px solid;
+	border-radius: 5px;
+	background-color: rgb(241, 241, 244);
+	text-align: center;
+	opacity: 0.5;
+}
+
+.sign-out:hover {
+	opacity: 1.0;
+}
+
 /*Contain chat*/
 .contain-chat {
-/*	position: relative;
-	display: flex;
-	flex-direction: column;
-	flex-grow: 1;
-	flex-shrink: 1;*/
-	overflow: hidden scroll;
 	float: left;
 	width: 80%;
-	overflow-y: auto;
+	height: 100%;
+	padding-top: 10px;
+}
+
+/* Header chat*/
+.header-chat {
+	width: 100%;
+	border-bottom: 1px solid #e5e5e5;
+	padding-left: 10px;
+}
+
+.header-chat .fa-user {
+	margin-right: 2px;
+	font-size: 25px;
+}
+
+.header-chat .fa-search {
+	position: fixed;
+	right: 170px;
+	font-size: 25px;
+}
+
+.header-chat .fa-gift {
+	position: fixed;
+	right: 100px;
+	font-size: 25px;
+}
+
+.header-chat .fa-user-plus {
+	position: fixed;
+	right: 30px;
+	font-size: 25px;
+}
+
+.header-chat i {
+	cursor: pointer;
+}
+
+.header-chat img {
+	float: left;
+	width: 40px;
+	height: 40px;
+	border: 1px solid;
+	border-radius: 20px;
+	cursor: pointer;
+}
+
+.header-chat h2 {
+	display: inline-block;
+	margin: 10px;
 }
 
 * {
