--- a/css/style.css
+++ b/css/style.css
@@ -107,12 +107,12 @@ ul, li {
 .box-chat {
 	position: fixed;
 	bottom: 0;
-	width: 100%;
+	width: 80%;
 	border-top: 1px solid #e5e5e5;
 }
 
-#formSendMsg input[type="text"] {
-	width:  calc(100% - 20px);
+.contain-chat input[type="text"] {
+	width:  calc(80% - 20px);
 	padding: 10px;
 	font-size: 15px;
 	color: #555;
@@ -172,6 +172,7 @@ ul, li {
 .navbar-chat {
 	float: left;
 	width: 20%;
+	min-width: 359px;
 	height: 100%;
 	padding: 10px;
 	border: 1px solid grey;
@@ -240,6 +241,7 @@ ul, li {
 	height: 60px;
 	padding: 2px 2px;
 	margin: 2px 2px;
+	cursor: pointer;
 }
 
 .navbar-row:hover {
@@ -254,7 +256,7 @@ ul, li {
 	height: 40px;
 	border: 1px solid;
 	border-radius: 20px;
-	cursor: pointer;
+	/*cursor: pointer;*/
 }
 
 .navbar-row h2 {
@@ -286,6 +288,7 @@ ul, li {
 .contain-chat {
 	float: left;
 	width: 80%;
+	min-width: 500px;
 	height: 100%;
 	padding-top: 10px;
 }
@@ -340,4 +343,10 @@ ul, li {
 
 * {
 	box-sizing: border-box;
+}
+
+@media only screen and (max-width: 859px){
+    .navbar-chat {
+    	display: none;
+    }
 }
