--- a/css/style.css
+++ b/css/style.css
@@ -108,23 +108,59 @@ ul, li {
 	position: fixed;
 	bottom: 0;
 	width: 80%;
-	border-top: 1px solid #e5e5e5;
+	/*border-top: 1px solid #e5e5e5;*/
+}
+
+.box-chat div:first-child {
+	display: inline-block;
+	width: 100px;
+}
+
+.box-chat div:nth-child(2) {
+	display: inline-block;
+	width: calc(100% - 200px);
+}
+
+.box-chat div:last-child {
+	display: inline-block;
+	width: 100px;
 }
 
 .contain-chat input[type="text"] {
-	width:  calc(80% - 20px);
+	/*width:  calc(80% - 20px);*/
+	width: calc(100% - 200px);
 	padding: 10px;
 	font-size: 15px;
 	color: #555;
+	background-color: rgb(241, 241, 244);
+	border:  none;
+	border-radius: 20px;
 }
 
 /*Main show messages*/
 .main-chat {
-	height:  95%;
+	height:  75%;
 	padding:  10px 68px 60px 69px;
-	/*margin-top: 50px;*/
+	overflow: hidden;
+}
+
+.main-chat:hover {
 	overflow: hidden scroll;
 }
+
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+	background: grey;
+	border-radius: 5px;
+}
+
+/*::-webkit-scrollbar-button {
+    height: 50px;
+}
+*/
 .main-chat .msg-user {
 	width: 100%;
 	text-align: right;
@@ -171,7 +207,7 @@ ul, li {
 /*Navbar chat*/
 .navbar-chat {
 	float: left;
-	width: 20%;
+	/*width: 20%;*/
 	min-width: 359px;
 	height: 100%;
 	padding: 10px;
@@ -287,7 +323,7 @@ ul, li {
 /*Contain chat*/
 .contain-chat {
 	float: left;
-	width: 80%;
+	width: calc(100% - 389px);
 	min-width: 500px;
 	height: 100%;
 	padding-top: 10px;
@@ -295,7 +331,7 @@ ul, li {
 
 /* Header chat*/
 .header-chat {
-	width: 100%;
+	/*width: 100%;*/
 	border-bottom: 1px solid #e5e5e5;
 	padding-left: 10px;
 }
@@ -345,8 +381,16 @@ ul, li {
 	box-sizing: border-box;
 }
 
-@media only screen and (max-width: 859px){
+@media only screen and (max-width: 889px){
     .navbar-chat {
     	display: none;
+    }
+
+    .contain-chat {
+    	width: 100%;
+    }
+
+    .contain-chat input[type="text"] {
+    	width: 100%;
     }
 }
